# computational_methods

Approximation/src/: CMakeLists.txt  Cubic_Interpolation_Spline_1D.cpp  Point.h  Smoothing_Spline_1D.cpp  Smoothing_Spline_1D.h  main.cpp  regular_partions.cpp
DiscreteFourierTransform/src/: CMakeLists.txt  fourier_transforms.cpp  fourier_transforms.hpp  main.cpp
NumericalIntegration/src/: Integration_Scheme.h  Integration_Scheme_Interval.cpp  main.cpp
Practice2/src/: Cubic_Interpolation_Spline_1D.h  Point.cpp  Spline.h  regular_partions.h
Practice6/src/: CMakeLists.txt  Integration_Scheme_Interval.h  Point.cpp
